With the Windows style the focus indicator for text labels is a rectangle with a thick black border which doesn't look very nice and is way too prominent. See
This should be improved. (T5824#160927)
With the Windows style the focus indicator for text labels is a rectangle with a thick black border which doesn't look very nice and is way too prominent. See
This should be improved. (T5824#160927)
rKLEOPATRA Kleopatra | |||
rKLEOPATRA0f4b32053f8d Draw focus indicator for labels only if focus was changed with keyboard | |||
rKLEOPATRA876b9d267084 Draw a less prominent focus indicator for text labels |
Status | Assigned | Task | ||
---|---|---|---|---|
Open | None | T5824 Kleopatra: Full accessibility support | ||
Resolved | aheinecke | T6111 Kleopatra: Improve focus indicator for text labels |
With the Breeze style the (old) focus indicator looks like this:
The (experimental) improved focus indicator looks like this with the Breeze style:
On Windows, it does now look like this:
But only after moving the keyboard input focus with Tab. I think not showing the focus indicator when the user didn't use Tab is okay. Windows Explorer also doesn't mark the file that has the focus with a focus indicator and pressing the Right key will immediately highlight the next file while pressing Tab and then Shift+Tab draws the focus indicator around the first file.
Mmh, I am pretty sure that I somewhere commented about this and found this appropriate. I think this can be resolved. Thanks.