Draw a less prominent focus indicator for text labels

Draw a PE_FrameFocusRect primitive instead of a CE_FocusFrame control
for the focus frame. This is an experimental change to check how it
looks on Windows. The Breeze style draws the primitive as a line below
the widget.

GnuPG-bug-id: 6111